# ImageMagick.cmake

./: CMakeLists.txt
Magick++/: CMakeLists.txt
MagickCore/: CMakeLists.txt
MagickWand/: CMakeLists.txt
coders/: CMakeLists.txt
filters/: CMakeLists.txt
